--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-nino-mtavruli-bold/css/bpg-nino-mtavruli-bold.min.css"> -->
-    <link rel="stylesheet" href="css/fonts.css">
+    <!-- <link rel="stylesheet" href="css/fonts.css"> -->
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Document</title>
 </head>
 <body>
-    <div class="test">
-        ფგტუილჯჰმნ
-    </div>
     <header>
         <a href="index.html"><img src="img/html-logo.svg" alt="html-logo"></a>
         <nav class="header-nav display-inline-block">
