--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -11,28 +12,44 @@
 <body>
     <header>
         <a href="index.html"><img src="img/html-logo.svg" alt="html-logo"></a>
-        <nav class="header-nav">
+        <nav class="header-nav display-inline-block">
             <ul>
-                <li><a href="index.html">მთავარი</a></li>
-                <li><a href="news.html">სიახლეები</a></li>
-                <li><a class="clicked" href="contact.html">კონტაქტი</a></li>
+                <li><a class="nav-a" href="index.html">მთავარი</a></li>
+                <li><a class="nav-a" href="news.html">სიახლეები</a></li>
+                <li><a class="nav-a clicked" href="contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
     </header>
-    <main class="contact-main">
-        <div>
-            <h2>საკონტაქტო ინფორმაცია:</h2>
-            <p>მისამართი:<span>პეტრიაშვილის ქ. 30</span></p>
-            <p>ტელ.:<span>+995 32 222 222</span></p>
-            <p>ელ. ფოსტა:<span>mail@gmail.com</span></p>
+
+    <section class="contact-section">
+        <div class="conteiner">
+            <div class="left-block display-inline-block">
+                <h3 class="contact-title">საკონტაქტო ინფორმაცია:</h3>
+                <ul class="contact-ul">
+                    <li class="contact-li">
+                        <span class="contact-span">მისამართი:</span> <a href="https://www.google.com/maps/place/30+Vasil+Petriashvili+Street,+T'bilisi/@41.7051136,44.7787797,16.71z/data=!4m5!3m4!1s0x40440cce3a01fef7:0x2a75ae2128072d6!8m2!3d41.7054782!4d44.7795089" target="_blank">პეტრიაშვილის ქ. 30</a> 
+                    </li>
+                    <li class="contact-li">
+                        <span class="contact-span">ტელ.:</span> <a href="tel:+995 32 222 222">+995 32 222 222</a> 
+                    </li>
+                    <li class="contact-li">
+                        <span class="contact-span">ელ. ფოსტა:</span> <a href="mailto:mail@gmail.com?subject=Mail from Our Site">mail@gmail.com </a> 
+                    </li>
+                </ul>
+            </div><!--
+             --><div class="right-block display-inline-block">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.136096883211!2d44.782830215677905!3d41.71758198342254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472d4fa5b02d7%3A0xced15c2c7992ceb5!2sGeoLab!5e0!3m2!1sen!2sge!4v1570376672807!5m2!1sen!2sge" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.136096883211!2d44.782830215677905!3d41.71758198342254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472d4fa5b02d7%3A0xced15c2c7992ceb5!2sGeoLab!5e0!3m2!1sen!2sge!4v1570350872098!5m2!1sen!2sge" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-    </main>
-    <footer>
+
+    </section>
+
+
+    <!-- <footer>
         <a href="https://www.facebook.com/"><img class="footer-img" src="img/facebook-logo.svg" alt="facebook-logo"></a>
         <div></div>
         <a href="https://www.youtube.com/"><img class="footer-img" src="img/youtube.svg" alt="youtube"></a>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
