--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <!-- <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-nino-mtavruli-bold/css/bpg-nino-mtavruli-bold.min.css"> -->
     <!-- <link rel="stylesheet" href="css/fonts.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    
+
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <a href="index.html"><img src="img/html-logo.svg" alt="html-logo"></a>
@@ -34,17 +35,41 @@
                 <div class="article-box display-inline-block article-box-margin">
                     <h3 class="article-title">Responsive Web Design</h3>
                     <img class="image-article display-inline-block" src="img/index-logo-heand.png" alt="heand">
-                    <p class="article-p display-inline-block">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
-                </div><!--                  
-                 --><div class="article-box display-inline-block">
+                    <p class="article-p display-inline-block">approach that suggests that design and development should
+                        respond to the user's behavior and environment based on screen size, platform and orientation.
+                    </p>
+                </div>
+                <!--                  
+                 -->
+                <div class="article-box display-inline-block">
                     <h3 class="article-title">App Development</h3>
                     <img class="image-article display-inline-block" src="img/index-logo-phone.png" alt="phone">
-                    <p class="article-p display-inline-block">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
+                    <p class="article-p display-inline-block">Mobile application development is the process of making or
+                        creating a mobile application to run on various mobile platforms. A mobile platform is a mobile
+                        operating system.</p>
                 </div>
             </div>
         </div>
 
     </section>
+    <footer>
+        <nav class="footer-nav display-inline-block">
+            <ul>
+                <li class="display-inline-block">
+                    <a class="footer-a display-inline-block" href="https://www.facebook.com/">
+                        <img class="footer-img display-inline-block" src="img/facebook-logo.svg" alt="facebook">
+                    </a>
+                </li>
+                <li class="display-inline-block"><div class="divador display-inline-block"></div></li>
+                <li class="display-inline-block">
+                    <a class="footer-a display-inline-block" href="https://www.youtube.com/">
+                        <img class="footer-img display-inline-block" src="img/youtube.svg" alt="youtube">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
 
 </html>
