--- a/news.html
+++ b/news.html
@@ -10,24 +10,25 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="img/html-logo.svg" alt="html-logo"></a> 
-        <nav class="header-nav">
+        <a href="index.html"><img src="img/html-logo.svg" alt="html-logo"></a>
+        <nav class="header-nav display-inline-block">
             <ul>
-                <li><a href="index.html">მთავარი</a></li>
-                <li><a class="clicked" href="news.html">სიახლეები</a></li>
-                <li><a href="contact.html">კონტაქტი</a></li>
+                <li><a class="nav-a clicked" href="index.html">მთავარი</a></li>
+                <li><a class="nav-a" href="news.html">სიახლეები</a></li>
+                <li><a class="nav-a" href="contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="news-main">
         <section>
             <p class="news-section-p-1">27</p>
             <p class="news-section-p-2">მაისი</p>
         </section>
         <h2 class="news-h2">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h2>
         <div class="news-div">
-            <img class="news-main-div-img" src="img/news-photo-1.jpg" alt="">
-            <p class="news-p">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ
+            <img class="news-main-div-img display-inline-block" src="img/news-photo-1.jpg" alt="">
+            <p class="news-p display-inline-block">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო
+                მოფიქრებულ
                 მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას
                 მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო
                 დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა
@@ -52,8 +53,9 @@
         </section>
         <h2 class="news-h2">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h2>
         <div class="news-div">
-            <img class="news-main-div-img" src="img/news-photo-2.jpg" alt="">
-            <p class="news-p">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ
+            <img class="news-main-div-img display-inline-block" src="img/news-photo-2.jpg" alt="">
+            <p class="news-p display-inline-block">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო
+                მოფიქრებულ
                 მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას
                 მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო
                 დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა
@@ -78,8 +80,9 @@
         </section>
         <h2 class="news-h2">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h2>
         <div class="news-div">
-            <img class="news-main-div-img" src="img/news-photo-3.jpg" alt="">
-            <p class="news-p">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო მოფიქრებულ
+            <img class="news-main-div-img display-inline-block" src="img/news-photo-3.jpg" alt="">
+            <p class="news-p display-inline-block">ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ, გაშენებული ფილმებშიო
+                მოფიქრებულ
                 მცირე მეგრელს გირეკავენ ბრინკა მოფარფატე პაოლო. ვარსკვლავი მკითხავი გაფითრდა მოადგილე გამოუშვას
                 მოფიქრებულ, ადამიანებიც გინდ სარეცხი. გავარდნილი უნივერსიტეტის კინოსადმი ბრინკა შევცდით ორპირო
                 დაკავებული, რეზინის დასჩემდა მოადგილე თავისიანებს. მკითხავი ძნით სდუმდა დასჩემდა, მეგრელს დასრესა
@@ -98,12 +101,26 @@
                 საზღვარზე გააერთიანა კონიაკისა, მოვაწერე დღითი დებატებმა კანკალებს საღამოები გამოფინეს თქვე.
             </p>
         </div>
+
     </main>
     <footer>
-        <a href="https://www.facebook.com/"><img class="footer-img" src="img/facebook-logo.svg"
-                alt="facebook-logo"></a>
-        <div></div>
-        <a href="https://www.youtube.com/"><img class="footer-img" src="img/youtube.svg" alt="youtube"></a>
+        <nav class="footer-nav display-inline-block">
+            <ul>
+                <li class="display-inline-block">
+                    <a class="footer-a display-inline-block" href="https://www.facebook.com/">
+                        <img class="footer-img display-inline-block" src="img/facebook-logo.svg" alt="facebook">
+                    </a>
+                </li>
+                <li class="display-inline-block">
+                    <div class="divador display-inline-block"></div>
+                </li>
+                <li class="display-inline-block">
+                    <a class="footer-a display-inline-block" href="https://www.youtube.com/">
+                        <img class="footer-img display-inline-block" src="img/youtube.svg" alt="youtube">
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </footer>
 </body>
 
